--- a/full-stack.html
+++ b/full-stack.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/loandepot/job/oOFQafwd'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/loandepot/job/oOFQafwd'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light">Chennai, India  Berkeley</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://verticalscale.join.com/jobs/471529-full-stack-developer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Full-Stack Develo... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verticalscale.join.com/jobs/471529-full-stack-developer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Full-Stack Develo... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -248,7 +248,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
+<h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -264,7 +264,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/16uzirax4bwc4zkcakcc6xueyr'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/pwwrecruiting/job/16uzirax4bwc4zkcakcc6xueyr'>Full Stack Software Developer - .NET | PWW Recruiting, LLC. </a></h5> 
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -384,7 +384,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://ateliware.recruitee.com/o/junior-full-stack-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ateliware.recruitee.com/o/junior-full-stack-engineer'>
       Junior Full Stack Engineer - ateliware software
     </a></h5> 
 <p><span class="badge badge-light">Curitiba Brazil</span></p>
@@ -398,7 +398,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999689314627-consultant-full-stack-junior'>SMARTWAVE Consultant Full stack Junior | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999689314627-consultant-full-stack-junior'>SMARTWAVE Consultant Full stack Junior | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -406,7 +406,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=odKlafwc&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nIy3nMwX'> Plutora Careers - Full Stack .Net Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qRzaVfwf&k=Job&j=odKlafwc&__jvst=Employee&__jvsd=sY27chw5&__jvsc=Twitter&bid=nIy3nMwX'> Plutora Careers - Full Stack .Net Developer</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
